# rules_engine

./: .gitignore  DEVLOG.md  Makefile  docker-compose.yml
db/init/: 01_extensions.sql
docs/claude_logs/: session_2026-04-10_14-26_engine-docker-build-perf.md
engine/: Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint-dev.sh
engine/crates/api-server/: Cargo.toml
engine/crates/api-server/src/: db.rs  main.rs  routes.rs
engine/crates/engine/: Cargo.toml
engine/crates/engine/src/: evaluator.rs
frontend/: Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/groups/: page.tsx
frontend/app/policies/: page.tsx
frontend/components/: App.tsx  ChatPanel.tsx  Icons.tsx  Sidebar.tsx
frontend/components/create/: CreateAgentFlow.tsx  CreateGroupFlow.tsx  CreateModal.tsx  CreatePolicyFlow.tsx
frontend/components/dashboard/: OrgOverview.tsx  QuickActions.tsx  RecentDecisions.tsx
frontend/components/entity/: EntityList.tsx
frontend/components/envelope/: DenyBanner.tsx  DimensionDisplay.tsx  EnvelopeView.tsx  InheritanceChain.tsx
frontend/components/layout/: Breadcrumb.tsx  Header.tsx  SearchDialog.tsx
frontend/components/surfaces/: Assignments.tsx  Builder.tsx  CodeEditor.tsx  History.tsx  RsopView.tsx  TestRepl.tsx
frontend/components/ui/: PolicyList.tsx
frontend/lib/: api.ts
frontend/public/: prototype.html
management/: Dockerfile  Dockerfile.dev  build.gradle.kts  gradlew
tests/: smoke.sh
(+28 files in other folders)
