[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
cedar-policy = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
